fix wrap filter button

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,6 @@ a {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  /* width: 377px; */
   width: auto;
   height: 49px;
   margin-top: 35px;
@@ -606,7 +605,8 @@ input.search::placeholder {
   .filter-button {
     justify-content: flex-start;
     padding-left: 15px;
-    width: 160px;
+    min-width: 154px;
+    width: 40%;
     height: 50px;
     font-size: 14px;
     margin: auto;
